Adicionado arquivos do dia 31/05

--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -13,7 +13,7 @@
         <ul class="navbar-nav ml-auto">
 
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/home']" >Clínicas</a>
+            <a class="nav-link" [routerLink]="['/home']" >Principal</a>
           </li>
 
           <li class="nav-item">
@@ -28,6 +28,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/observadoras']">Observadoras</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/clinicas']">Clínicas</a>
           </li>
 
         </ul>
