--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -32,6 +32,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/clinicas']">Clínicas</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/pacientes']">Pacientes</a>
+          </li>
 
         </ul>
       </div>
