--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -35,6 +35,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/pacientes']">Pacientes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/cadastro-paciente']">Cadastrar Paciente</a>
+          </li>
 
         </ul>
       </div>
